[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pcloud-python-sdk"
version = "0.1.0"
description = "Dropbox-style Python client for the pCloud API."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Your Name" }]
keywords = ["pcloud", "cloud-storage", "sdk", "dropbox-style"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Typing :: Typed",
]

dependencies = [
  "requests>=2.28,<3",
]

[project.urls]
Homepage = "https://github.com/you/pcloud-python-sdk"
Issues = "https://github.com/you/pcloud-python-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["pcloud"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.9"
strict = false
